--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.6</version>
                 <configuration>
-                    <mainClass>HelloFX</mainClass>
+                    <mainClass>CellAutomata</mainClass>
                 </configuration>
             </plugin>
         </plugins>
