--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>5.8.0-M1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
